src/pages/Home/Advantages/style.css
@value from-tablet, to-tablet, from-tablet-portrait, to-tablet-portrait, from-mobile, to-mobile, main-blue-5 from '/theme/vars.css';
@value radius, normal-padding, large-padding, normal-title, large-title, weight-title, size-description, offset-description from '/theme/card.css';

.advantages {
  padding-top: 48px;
  padding-bottom: 48px;
  background-color: main-blue-5;

  @media (min-width: from-mobile) {
    padding-top: 72px;
    padding-bottom: 72px;
  }

  @media (min-width: from-tablet) {
    padding-top: 96px;
    padding-bottom: 96px;
  }
}

.cards {
  display: flex;
  justify-content: space-between;
  flex-wrap: wrap;
}

.card {
  border-radius: radius;
  background-color: #fff;
  width: 100%;
  position: relative;

  @media (max-width: to-tablet) and (min-width: from-mobile) {
    width: calc(50% - 12px);

    &:last-child {
      width: 100%;
      margin-top: 24px;
      display: flex;
      align-items: center;

      .body {
        padding-bottom: 32px;
        padding-top: 32px;
        padding-left: 0;
      }
    }
  }

  @media (max-width: to-tablet) and (min-width: from-tablet-portrait) {
    &:last-child {
      padding-top: 34px;
      padding-bottom: 34px;
      padding-left: 24px;
    }
  }
  @media (max-width: to-tablet-portrait) and (min-width: from-mobile) {
    &:last-child {
      padding-top: 8px;
      padding-bottom: 8px;
    }
  }

  @media (min-width: from-tablet) {
    width: calc(33.333% - 12px);
  }

  @media (max-width: to-mobile) {
    &:not(:last-child) {
      margin-bottom: 24px;
    }
  }
}

.body {
  padding: 0 normal-padding 32px normal-padding;

  @media (min-width: from-mobile) {
    padding: 0 large-padding 48px large-padding;
  }
}

.img,
.anim {
  max-width: 100%;
  width: 100%;
  display: block;
  margin-left: auto;
  margin-right: auto;

  @media (max-width: to-tablet) {
    max-width: 260px;
  }

  @media (max-width: to-tablet-portrait) {
    max-width: 240px;
  }
}

.anim {
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  background-color: #fff;
  border-radius: radius;
}

.title {
  font-size: normal-title;
  font-weight: weight-title;
  line-height: 1.2;

  @media (min-width: from-tablet) {
    font-size: large-title;
  }
}

.description {
  font-size: size-description;
  margin-top: offset-description;
}

